Fixed a weird navbar glitch. We have the whitespace to the left now though again fuck css :(

--- a/public/style.css
+++ b/public/style.css
@@ -42,6 +42,8 @@ body {
   padding-left: 0px;
   padding-right: 0px;
   width: 100vw;
+  margin-left: 0px;
+  margin-right: 0px;
   background-color: #6B979B;
 }
 
